--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-
+        <link rel="stylesheet" href="scripts/script.css">
     </head>
     <body>
-        
+        <p>audgafgasoisfguagfuagfo</p>
     </body>
 </html>
