--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
         <link rel="stylesheet" href="scripts/script.css">
     </head>
     <body>
+        <ul class="ulnav">
+            <li class="linav"><a href="" class="active">About</a></li>
+            <li class="linav"><a href="" class="active">Favorite food</a></li>
+            <li class="linav"><a href="" class="active">Brands of food</a></li>
+            <li class="linav"><a href="" class="active">Recipies</a></li>
+            <li class="linav"><a href="" class="active">Chefs</a></li>
+            <li class="linav"><a href="" class="active">Ingredients</a></li>
+        </ul>
         <p>audgafgasoisfguagfuagfo</p>
     </body>
 </html>
