--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <ul class="ulnav">
-            <li class="linav"><a href="" class="active">About</a></li>
+            <li class="linav"><a href="index.html" class="active">About</a></li>
             <li class="linav"><a href="" class="active">Favorite food</a></li>
             <li class="linav"><a href="" class="active">Brands of food</a></li>
             <li class="linav"><a href="" class="active">Recipies</a></li>
