--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
             <li class="linav"><a href="" class="active">Chefs</a></li>
             <li class="linav"><a href="" class="active">Ingredients</a></li>
         </ul>
-        <p>About me Page</p>
+        <p class="title">About me Page</p>
     </body>
 </html>
