--- a/brands.html
+++ b/brands.html
@@ -11,6 +11,6 @@
             <li class="linav"><a href="chefs.html" class="active">Chefs</a></li>
             <li class="linav"><a href="ingredients.html" class="active">Ingredients</a></li>
         </ul>
-        <p class="title">About Me Page</p>
+        <p class="title">Favorite Brands Page</p>
     </body>
 </html>
