--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <body>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <div class="text-box">
-            <h1 style="color:#FFFFFF">About</h1>
+            <h1 style="color:#FFFFFF">About Our Sites</h1>
             <h3 style="color:#FFFFFF">Food: Know all our favorite foods</h3>
             <h3 style="color:#FFFFFF">Recipe: See all the recipes that makes the food we like</h3>
             <h3 style="color:#FFFFFF">Ingredients: Get to know whats in our favorite foods</h3>
