--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
     <head>
         <link rel="stylesheet" href="scripts/script.css">
     </head>
+    <style>
+            h1 {text-align: center;}
+            h2 {text-align: center;}
+            h3 {text-align: center;}
+    </style>
     <body>
         <ul class="ulnav">
             <li class="linav"><a href="index.html" class="active">About</a></li>
@@ -11,6 +16,14 @@
             <li class="linav"><a href="chefs.html" class="active">Chefs</a></li>
             <li class="linav"><a href="ingredients.html" class="active">Ingredients</a></li>
         </ul>
-        <p class="title">About Me Page</p>
+        <p class="title">About Our Sites</p>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <div class="text-box">
+            <h3 style="color:#FFFFFF">Food: Know all our favorite foods</h3>
+            <h3 style="color:#FFFFFF">Recipe: See all the recipes that makes the food we like</h3>
+            <h3 style="color:#FFFFFF">Ingredients: Get to know whats in our favorite foods</h3>
+            <h3 style="color:#FFFFFF">Chefs: Get to know famous chefs that make the food</h3>
+            <h3 style="color:#FFFFFF">Brands of food: Know the brands that help make the food</h3>
+        </div>
     </body>
 </html>
