images added to project
push changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <li class="linav"><a href="ingredients.html" class="active">Ingredients</a></li>
         </ul>
         <p class="title">About Our Sites</p>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <img src="images/pizza.png" width="400px">
+        <br><br><br><br><br><br>
         <div class="text-box">
             <h3 style="color:#FFFFFF">Food: Know all our favorite foods</h3>
             <h3 style="color:#FFFFFF">Recipe: See all the recipes that makes the food we like</h3>
