--- a/Food.html
+++ b/Food.html
@@ -11,6 +11,6 @@
             <li class="linav"><a href="chefs.html" class="active">Chefs</a></li>
             <li class="linav"><a href="ingredients.html" class="active">Ingredients</a></li>
         </ul>
-        <p class="title">Favorite Food Page</p>
+        <p class="title">Favorite Food</p>
     </body>
 </html>
