--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
         </ul>
         <p class="title">About Our Sites</p>
         <img src="images/pizza.png" width="300px">
-        <br><br><br><br>
+        <br><br>
         <div class="text-box">
-            <h3 style="color:#FFFFFF">About: Will explain all our Sites</h3>
-            <h3 style="color:#FFFFFF">Favorite Food: Know all our favorite foods</h3>
+            <h3 style="color:#FFFFFF">Our project webpage purpose is to show our what foods we like and what helps make these foods come true</h3>
+            <h3 style="color:#FFFFFF">Food: Know all our favorite foods</h3>
             <h3 style="color:#FFFFFF">Recipe: See all the recipes that makes the food we like</h3>
             <h3 style="color:#FFFFFF">Chefs: Get to know famous chefs that make the food</h3>
             <h3 style="color:#FFFFFF">Brands of food: Know the brands that help make the food</h3>
-
         </div>
     </body>
 </html>
