--- a/Food.html
+++ b/Food.html
@@ -11,5 +11,22 @@
             <li class="linav"><a href="chefs.html" class="active">Chefs</a></li>
         </ul>
         <p class="title">Favorite Food</p>
+        <div class="row">
+            <div class="column">
+              <img src="images/pizza.png" alt="Pizza" style="width:400">
+            </div>
+            <div class="column">
+              <img src="images/sp.png" alt="Sweet-Potato" style="width:400" style="height: 200">
+            </div>
+            <div class="column">
+              <img src="images/strombolis.png" alt="Strombolis" style="width:400">
+            </div>
+            <div class="column">
+                <img src="images/taco.png" alt="Taco" style="width:400">
+            <div class="column">
+                <img src="images/yogurt.png" alt="Yogurt" style="width:440">
+            </div>
+              </div>
+          </div>
     </body>
 </html>
