--- a/Food.html
+++ b/Food.html
@@ -5,7 +5,7 @@
     <body>
         <ul class="ulnav">
             <li class="linav"><a href="index.html" class="active">About</a></li>
-            <li class="linav"><a href="Food.html" class="active">Favorite food</a></li>
+            <li class="linav"><a href="food.html" class="active">Favorite food</a></li>
             <li class="linav"><a href="brands.html" class="active">Brands of food</a></li>
             <li class="linav"><a href="recipies.html" class="active">Recipies</a></li>
             <li class="linav"><a href="chefs.html" class="active">Chefs</a></li>
