--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
         h3 {text-align: center;}
     </style>
     <body>
-        <ul class="ulnav">
-            <li class="linav"><a href="index.html" class="active">About</a></li>
-            <li class="linav"><a href="Food.html" class="active">Favorite food</a></li>
-            <li class="linav"><a href="brands.html" class="active">Brands of food</a></li>
-            <li class="linav"><a href="recipies.html" class="active">Recipies</a></li>
-            <li class="linav"><a href="chefs.html" class="active">Chefs</a></li>
-        </ul>
+        <table id="header-table">
+            <tr id="header-tr">
+                <td id="header-td"><a href="index.html" class="active">About</a></td>
+                <td id="header-td"><a href="Food.html" class="active">Favorite food</a></td>
+                <td id="header-td"><a href="brands.html" class="active">Brands of food</a></td>
+                <td id="header-td"><a href="recipies.html" class="active">Recipies</a></td>
+                <td id="header-td"><a href="chefs.html" class="active">Chefs</a></td>
+            </tr>
+        </table>
+        <br><br>
         <p class="title">About Our Sites</p>
         <img src="images/pizza.png" width="300px">
-        <br><br>
         <div class="text-box">
             <h3 style="color:#FFFFFF">Our project webpage purpose is to show our what foods we like and what helps make these foods come true</h3>
             <h3 style="color:#FFFFFF">Food: Know all our favorite foods</h3>
