--- a/recipies.html
+++ b/recipies.html
@@ -3,13 +3,15 @@
         <link rel="stylesheet" href="scripts/script.css">
     </head>
     <body>
-        <ul class="ulnav">
-            <li class="linav"><a href="index.html" class="active">About</a></li>
-            <li class="linav"><a href="Food.html" class="active">Favorite food</a></li>
-            <li class="linav"><a href="brands.html" class="active">Brands of food</a></li>
-            <li class="linav"><a href="recipies.html" class="active">Recipies</a></li>
-            <li class="linav"><a href="chefs.html" class="active">Chefs</a></li>
-        </ul>
+        <table id="header-table">
+            <tr id="header-tr">
+                <td id="header-td"><a href="index.html" class="active">About</a></td>
+                <td id="header-td"><a href="Food.html" class="active">Favorite food</a></td>
+                <td id="header-td"><a href="brands.html" class="active">Brands of food</a></td>
+                <td id="header-td"><a href="recipies.html" class="active">Recipies</a></td>
+                <td id="header-td"><a href="chefs.html" class="active">Chefs</a></td>
+            </tr>
+        </table>
         <p class="title">Favorite Recipies Page</p>
     </body>
 </html>
