--- a/Food.html
+++ b/Food.html
@@ -16,7 +16,7 @@
               <img src="images/pizza.png" alt="Pizza" style="width:400">
             </div>
             <div class="column">
-              <img src="images/sp.png" alt="Sweet-Potato" style="width:400" style="height: 200">
+              <img src="images/sp.png" alt="Sweet-Potato" style="width:400; height:350;">
             </div>
             <div class="column">
               <img src="images/strombolis.png" alt="Strombolis" style="width:400">
