--- a/index.html
+++ b/index.html
@@ -16,14 +16,34 @@
             <li class="linav"><a href="chefs.html" class="active">Chefs</a></li>
         </ul>
         <p class="title">About Our Sites</p>
-        <img src="images/pizza.png" width="300px">
-        <br><br>
-        <div class="text-box">
-            <h3 style="color:#FFFFFF">Our project webpage purpose is to show our what foods we like and what helps make these foods come true</h3>
-            <h3 style="color:#FFFFFF">Food: Know all our favorite foods</h3>
-            <h3 style="color:#FFFFFF">Recipe: See all the recipes that makes the food we like</h3>
-            <h3 style="color:#FFFFFF">Chefs: Get to know famous chefs that make the food</h3>
-            <h3 style="color:#FFFFFF">Brands of food: Know the brands that help make the food</h3>
-        </div>
+        <div class="row">
+            <div class="column">
+              <div class="content">
+                <img src="images/food.jpg" alt="food" style="width:100%">
+                <h3>Favorite Food</h3>
+                <p>List of our favorite foods</p>
+              </div>
+            </div>
+            <div class="column">
+              <div class="content">
+              <img src="images/brands.png" alt="brands" style="width:550">
+                <h3>Brands of food</h3>
+                <p>Brands used in the foods we like</p>
+              </div>
+            </div>
+            <div class="column">
+              <div class="content">
+              <img src="images/recipes.png" alt="Recipies" style="width:430">
+                <h3>Recipies</h3>
+                <p>Recipies that are used to make our food</p>
+              </div>
+            </div>
+            <div class="column">
+              <div class="content">
+              <img src="images/cehfs.png" alt="Chefs" style="width:500">
+                <h3>Chefs</h3>
+                <p>Chefs that make our favorite food</p>
+              </div>
+          </div>
     </body>
 </html>
