--- a/Food.html
+++ b/Food.html
@@ -15,20 +15,27 @@
         <p class="title">Favorite Food</p>
         <div class="row">
             <div class="column">
-              <img src="images/pizza.png" alt="Pizza" style="width:400">
+              <img src="images/pizza.png" alt="Pizza" style="width:300px"  >
             </div>
             <div class="column">
-              <img src="images/sp.png" alt="Sweet-Potato" style="width:400" style="height: 200">
+              <img src="images/sp.png" alt="Sweet-Potato" style="width:250px">
             </div>
             <div class="column">
-              <img src="images/strombolis.png" alt="Strombolis" style="width:400">
+              <img src="images/strombolis.png" alt="Strombolis" style="width:300">
             </div>
             <div class="column">
-                <img src="images/taco.png" alt="Taco" style="width:400">
+                <img src="images/taco.png" alt="Taco" style="width:300">
             <div class="column">
-                <img src="images/yogurt.png" alt="Yogurt" style="width:440">
+                <img src="images/yogurt.png" alt="Yogurt" style="width:300">
             </div>
               </div>
           </div>
+          <fieldset>
+            <legend>
+            These foods are Tommy's Pizza In the left corner, Tommy's is located in Columbus Ohio. The second food is a Sweet-Potato with butter and Brown Sugar on it. 
+            The Middle food is Stromboli. It has pepperoni and cheese in the middle and on top of the bread it has arregano. The 4th food is a fruit parfait. It has
+            blueberrys, and rasberrys and cherrys. The last food is chicken tacos with pico de gallo on it. And these are our favorite foods :)
+            </legend>
+          </fieldset>
     </body>
 </html>
