--- a/index.html
+++ b/index.html
@@ -18,34 +18,35 @@
             </tr>
         </table>
         <br><br>
-        <p class="title">About Our Sites</p>
+        <h1 class="title">About Our Sites</h1>
         <div class="row">
             <div class="column">
               <div class="content">
-                <img src="images/food.jpg" alt="food" style="width:100%">
-                <h3>Favorite Food</h3>
-                <p>List of our favorite foods</p>
+                <img src="images/food.jpg" alt="food" style="width:800">
+                <h1>Favorite Food</h1>
+                <h3>List of our favorite foods</h3>
               </div>
             </div>
             <div class="column">
               <div class="content">
-              <img src="images/brands.png" alt="brands" style="width:550">
-                <h3>Brands of food</h3>
-                <p>Brands used in the foods we like</p>
+              <img src="images/brands.png" alt="brands" style="width:930">
+                <h1>Brands of food</h2>
+                <h3>Brands used in the foods we like</h3>
               </div>
+            </div>
+        </div>
+        <div class="column">
+          <div class="content">
+          <img src="images/recipes.png" alt="Recipes" style="width:860">
+            <h1>Recipes</h1>
+            <h3>Recipes that help make our faovrite food</h3>
+          </div>>
             </div>
             <div class="column">
               <div class="content">
-              <img src="images/recipes.png" alt="Recipies" style="width:430">
-                <h3>Recipies</h3>
-                <p>Recipies that are used to make our food</p>
-              </div>
-            </div>
-            <div class="column">
-              <div class="content">
-              <img src="images/cehfs.png" alt="Chefs" style="width:500">
-                <h3>Chefs</h3>
-                <p>Chefs that make our favorite food</p>
+              <img src="images/cehfs.png" alt="Chefs" style="width:950">
+                <h1>Chefs</h1>
+                <h3>Chefs that make our favorite food</h3>
               </div>
           </div>
     </body>
