--- a/chefs.html
+++ b/chefs.html
@@ -13,7 +13,14 @@
             </tr>
         </table>
         <p class="title">Chefs</p>
-        
+        <div class="chef-div">
+        <img src="images/chef1.jpg" alt="chef1" style="width:500" height="400" id="chef1">
+        <img src="images/chef2.jfif" alt="chef2" style="width:400" id="chef2">
+        <img src="images/chef3.jpg" alt="chef3" style="width:400" id="chef3">
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <img src="images/chef4.jfif" alt="chef4" style="width:500" height="400" id="chef4">
+        <img src="images/chef5.jfif" alt="chef5" style="width:500" height="400" id="chef5">
+    </div>
     </body>
     
 </html>
