--- a/chefs.html
+++ b/chefs.html
@@ -14,20 +14,35 @@
         </table>
         <p class="title">Chefs</p>
         <div class="container">
-            <img src="images/chef1.jpg" alt="chef1" class="image" width="400">
+            <img src="images/chef1.jpg" alt="chef1" class="image">
             <div class="overlay">
                 <div class="text">Gordon Ramsay</div>
         </div>
         </div>
         <div class="container">
-            <img src="images/chef2.jfif" alt="chef2" class="image" width="400">
+            <img src="images/chef2.jfif" alt="chef2" class="image">
             <div class="overlay">
                 <div class="text">Guy Fieri</div>
         </div>
         </div>
-        <img src="images/chef3.jpg" alt="chef3" style="width:400" id="chef3">
-        <img src="images/chef4.jfif" alt="chef4" style="width:500" height="400" id="chef4">
-        <img src="images/chef5.jfif" alt="chef5" style="width:500" height="400" id="chef5">
+        <div class="container">
+            <img src="images/chef3.jpg" alt="chef3" class="image">
+            <div class="overlay">
+                <div class="text"> Rachael Ray</div>
+        </div>
+        </div>
+        <div class="container">
+            <img src="images/chef4.jfif" alt="chef4" class="image">
+            <div class="overlay">
+                <div class="text">Emeril Lagasse</div>
+        </div>
+        </div>
+        <div class="container">
+            <img src="images/chef5.jfif" alt="chef5" class="image">
+            <div class="overlay">
+                <div class="text">Bobby Flay</div>
+        </div>
+        </div>
     </div>
     </body>  
 </html>
