--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </tr>
         </table>
         <br><br>
-        <h1 class="title">About Our Sites</h1>
+        <h1 class="title">About</h1>
 
     </body>
 </html>
