--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="text-box">
             <p style="color:#FFFFFF">Favorite Food page will tell you about all our favorite foods what they are</p>
             <p style="color:#FFFFFF">Brands of food will tell you about what brands of food we like and what we enjoy</p>
-            <p style="color:#FFFFFF">Recipies page .....</p>
+            <p style="color:#FFFFFF">Recipies page will inform you of all our faovirte recipies</p>
             <p style="color:#FFFFFF">Chefs will show all our faovrite chefs</p>
         </div>
         <br>
