--- a/recipies.html
+++ b/recipies.html
@@ -13,5 +13,8 @@
             </tr>
         </table>
         <p class="title">Favorite Recipies Page</p>
+        <img src="images/pizza.png" width="400px" height="300px" style="position: absolute; left: 10px">
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <p>This is the food pizza and the recipe for pizza would be... </p>
     </body>
 </html>
