--- a/chefs.html
+++ b/chefs.html
@@ -13,36 +13,71 @@
             </tr>
         </table>
         <p class="title">Chefs</p>
+        <table>
+        <tr>
+        <td>
         <div class="container">
             <img src="images/chef1.jpg" alt="chef1" class="image">
             <div class="overlay">
                 <div class="text">Gordon Ramsay</div>
+        
         </div>
         </div>
+        </td>
+        <td>hello</td>
+        </tr>
+        </table>
+        <table>
+        <tr>
+        <td>
         <div class="container">
             <img src="images/chef2.jfif" alt="chef2" class="image">
             <div class="overlay">
                 <div class="text">Guy Fieri</div>
         </div>
         </div>
+        </td>
+        <td>hello</td>
+        </tr>
+        </table>
+        <table>
+        <tr>
+        <td>    
         <div class="container">
             <img src="images/chef3.jpg" alt="chef3" class="image">
             <div class="overlay">
                 <div class="text"> Rachael Ray</div>
         </div>
         </div>
+        </td>
+        <td>hello</td>
+        </tr>
+        </table>
+        <table>
+        <tr>
+        <td>
         <div class="container">
             <img src="images/chef4.jfif" alt="chef4" class="image">
             <div class="overlay">
                 <div class="text">Emeril Lagasse</div>
         </div>
         </div>
+        </td>
+        <td>hello</td>
+        </tr>
+        </table>
+        <table>
+        <tr>
+        <td>
         <div class="container">
             <img src="images/chef5.jfif" alt="chef5" class="image">
             <div class="overlay">
                 <div class="text">Bobby Flay</div>
         </div>
         </div>
-    </div>
+        </td>
+        <td>hello</td>
+        </tr>
+        </table>
     </body>  
 </html>
