--- a/brands.html
+++ b/brands.html
@@ -12,6 +12,29 @@
                 <td id="header-td"><a href="chefs.html" class="active">Chefs</a></td>
             </tr>
         </table>
-        <p class="title">Favorite Brands Page</p>
+        <p class="title">Brands</p>
+        <div class="row">
+            <div class="column1">
+              <img src="images/takis.jpg" alt="takis">
+            </div>
+            <div class="column1">
+              <img src="images/lays.jpg" alt="lays">
+            </div>
+            <div class="column1">
+              <img src="images/ritz.jpeg" alt="ritz" >
+            </div>
+            <div class="column1">
+            </div> 
+             </div>
+            <img src="images/kraft.jpg_fit=scale" alt="kraft" >
+              </div>
+            </div>
+            <img src="images/Pillsbury.jpg" alt="pillsbury" >
+              </div>
+            </div>
+            <img src="images/hdchips.jpg" alt="hdchips" width>            
+              </div> 
+              </div>
+          </div>
     </body>
 </html>
