--- a/chefs.html
+++ b/chefs.html
@@ -24,7 +24,7 @@
         </div>
         </div>
         </td>
-        <td>hello</td>
+        <td>Gordan Ramsay is a British chef born in Johnstone, Scotland but was raised in England. he made his own Resturant and gain 7 Michelin stars (Stars awarded to high standard resturaunts). Today he is one of the most known and most influential chefs in the UK. </td>
         </tr>
         </table>
         <table>
@@ -37,7 +37,7 @@
         </div>
         </div>
         </td>
-        <td>hello</td>
+        <td>Guy Fieri was born in Columbus, Ohio in 1968. He co-owns three Restaurants in California and licenses his name to restaurants in New York City and Vegas. He is also host a telivision show which brings in more veiwers than any others on the Food Network (TV Channel).</td>
         </tr>
         </table>
         <table>
