--- a/brands.html
+++ b/brands.html
@@ -15,26 +15,29 @@
         <p class="title">Brands</p>
         <div class="row">
             <div class="column1">
-              <img src="images/takis.jpg" alt="takis">
+              <img src="images/takis.jpg" alt="takis" width="400">
             </div>
+            <h3>Takis</h3>
             <div class="column1">
-              <img src="images/lays.jpg" alt="lays">
+              <img src="images/lays.jpg" alt="lays" width="300">
             </div>
+            <h3>Lays</h3>
             <div class="column1">
-              <img src="images/ritz.jpeg" alt="ritz" >
+              <img src="images/ritz.jpeg" alt="ritz" width="400">
             </div>
-            <div class="column1">
-            </div> 
-             </div>
-            <img src="images/kraft.jpg_fit=scale" alt="kraft" >
+            <h3>Ritz</h3>
+              <div class="column1">
+                <img src="images/kraft.jpg_fit=scale" alt="kraft" width="350">
               </div>
-            </div>
-            <img src="images/Pillsbury.jpg" alt="pillsbury" >
+              <h3>Kraft</h3>
+              <div class="column1">
+                <img src="images/Pillsbury.jpg" alt="pillsbury" width="300">
               </div>
-            </div>
-            <img src="images/hdchips.jpg" alt="hdchips" width>            
-              </div> 
+              <h3>Pillsbury</h3>
+              <div class="column1">
+                <img src="images/hdchips.jpg" alt="hdchips" width="400">
               </div>
+              <h3>Humpty Dumpty</h3>
           </div>
     </body>
 </html>
