--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <br>
         <h1 class="title">About</h1>
         <div class="text-box">
-            <p style="color:#FFFFFF">Favorite Food page will tell you about all our favorite foods what they are</p>
-            <p style="color:#FFFFFF">Brands of food will tell you about what brands of food we like and what we enjoy</p>
-            <p style="color:#FFFFFF">Recipies page will inform you of all our faovirte recipies</p>
-            <p style="color:#FFFFFF">Chefs will show all our faovrite chefs</p>
+            <h3 style="color:#FFFFFF">Favorite Food page will tell you about all our favorite foods what they are</h3>
+            <h3 style="color:#FFFFFF">Brands of food will tell you about what brands of food we like and what we enjoy</h3>
+            <h3 style="color:#FFFFFF">Recipies page will inform you of all our faovirte recipies</h3>
+            <h3 style="color:#FFFFFF">Chefs will show all our faovrite chefs</h3>
         </div>
         <br>
         <img src="images/240_F_430621952_bjSk1Z2zSz0ZH5m68rnEdJPWRe4J57qX.jpg" alt="foodd" width="1900" height="380">
