--- a/chefs.html
+++ b/chefs.html
@@ -50,7 +50,7 @@
         </div>
         </div>
         </td>
-        <td>hello</td>
+        <td>Rachael Ray was born in Glens Falls, New York. She host Cook shows on Food Network like 30 Minute Meals, which she shows great meals that take under 30 Minutes, Rachael vs. Guy Celebrity Cook-Off, where Rachael Ray and Guy Fieri</td>
         </tr>
         </table>
         <table>
