--- a/recipies.html
+++ b/recipies.html
@@ -16,8 +16,11 @@
         <img src="images/pizza.png" width="400px" height="300px" style="position: absolute; left: 10px">
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <fieldset>
-        This is the food pizza and the recipe for pizza would be... INGREDIENTS
+        This is the food pizza and the recipe for pizza would be... 
+            INGREDIENTS
+            <br>
             Dough:
+            <br>
             2/3rd cup hot water
             <br>
             1 tsp active dry yeast
