--- a/chefs.html
+++ b/chefs.html
@@ -50,7 +50,7 @@
         </div>
         </div>
         </td>
-        <td>Rachael Ray was born in Glens Falls, New York. She host Cook shows on Food Network like 30 Minute Meals, which she shows great meals that take under 30 Minutes, Rachael vs. Guy Celebrity Cook-Off, where Rachael Ray and Guy Fieri</td>
+        <td>Rachael Ray was born in Glens Falls, New York. She host Cook shows on Food Network like 30 Minute Meals, which she shows great meals that take under 30 Minutes, Rachael vs. Guy Celebrity Cook-Off, Were Rachael Ray and Guy Fieri have a cook off against each other, and Rachael Ray's Kids Cook-Off, Were kids cook food and Rachael judges them. She also wrote many cook books.</td>
         </tr>
         </table>
         <table>
@@ -63,7 +63,7 @@
         </div>
         </div>
         </td>
-        <td>hello</td>
+        <td>Emeril Lagasse was born in Fall River, Massachusetts. He is a celebrity chef, telivision personality, and cookbook auther.</td>
         </tr>
         </table>
         <table>
