--- a/recipies.html
+++ b/recipies.html
@@ -14,7 +14,8 @@
         </table>
         <p class="title">Favorite Recipies Page</p>
         <img src="images/pizza.png" width="400px" height="300px" style="position: absolute; left: 10px">
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <img src="images/apple.jpg" width="400px" height="300px" style="position: absolute; right: 10px">
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <fieldset>
         This is the food pizza and the recipe for pizza would be... 
             INGREDIENTS
