--- a/Food.html
+++ b/Food.html
@@ -14,26 +14,27 @@
         </table>
         <p class="title">Favorite Food</p>
         <div class="row">
-            <div class="column">
-              <img src="images/pizza.png" alt="Pizza" style="width:300px">
-            </div>
-            <div class="column">
-              <img src="images/sp.png" alt="Sweet-Potato" style="width:400; height:350;">
-            </div>
-            <div class="column">
-              <img src="images/strombolis.png" alt="Strombolis" style="width:300">
-            </div>
-            <div class="column">
-                <img src="images/taco.png" alt="Taco" style="width:300">
-            <div class="column">
-                <img src="images/yogurt.png" alt="Yogurt" style="width:300">
-            </div>
-              </div>
+          <div class="column2">
+            <img src="images/pizza.png" alt="pizza" style="width:300">
           </div>
+          <div class="column2">
+            <img src="images/taco.png" alt="taco" style="width:300">
+          </div>
+          <div class="column2">
+            <img src="images/sp.png" alt="sp" style="width:300">
+          </div>
+        </div>
+        <div class="column2">
+          <img src="images/yogurt.png" alt="yogurt" style="width:300">
+        </div>
+        <div class="column2">
+          <img src="images/strombolis.png" alt="strombolis" style="width:300">
+        </div>
+        <br>
           <fieldset>
-            These foods are Tommy's Pizza In the left corner, Tommy's is located in Columbus Ohio. The second food is a Sweet-Potato with butter and Brown Sugar on it. 
-            The Middle food is Stromboli. It has pepperoni and cheese in the middle and on top of the bread it has arregano. The 4th food is a fruit parfait. It has
-            blueberrys, and rasberrys and cherrys. The last food is chicken tacos with pico de gallo on it. And these are our favorite foods :)
+            These foods are Tommy's Pizza In the left corner, Tommy's is located in Columbus Ohio.<br> The second food is a Sweet-Potato with butter and Brown Sugar on it. 
+            <br>The Middle food is Stromboli. It has pepperoni and cheese in the middle and on top of the bread it has arregano. <br>The 4th food is a fruit parfait. It has
+            blueberrys, and rasberrys and cherrys.<br> The last food is chicken tacos with pico de gallo on it. And these are our favorite foods :)
           </fieldset>
     </body>
 </html>
