--- a/chefs.html
+++ b/chefs.html
@@ -63,7 +63,7 @@
         </div>
         </div>
         </td>
-        <td>Emeril Lagasse was born in Fall River, Massachusetts. He is a celebrity chef, telivision personality, and cookbook auther.</td>
+        <td>Emeril Lagasse was born in Fall River, Massachusetts. He is a celebrity chef, telivision personality, and cookbook auther. He was awarded National Best Recipe award winner for his "Turkey and Hot Sausage Chili" in 2003. He also has the regional James Bread Award winner. He makes a total of $l50 million annually off of his media, Products, and restaurants.</td>
         </tr>
         </table>
         <table>
@@ -76,7 +76,7 @@
         </div>
         </div>
         </td>
-        <td>hello</td>
+        <td>Bobby Flay was born on December 10th, 1964 in New York City. He is owner and executive chef of many restaurants in Los Vegas, New York, and Alantic City. He has Restaurants in 11 diffrent states. He is also the host of several Food Network television programs.</td>
         </tr>
         </table>
     </body>  
