--- a/Food.html
+++ b/Food.html
@@ -15,26 +15,33 @@
         <p class="title">Favorite Food</p>
         <div class="row">
           <div class="column2">
-            <img src="images/pizza.png" alt="pizza" style="width:300">
+            <img src="images/pizza.png" alt="pizza" style="width:400">
           </div>
           <div class="column2">
-            <img src="images/taco.png" alt="taco" style="width:300">
+            <img src="images/taco.png" alt="taco" style="width:400">
           </div>
           <div class="column2">
-            <img src="images/sp.png" alt="sp" style="width:300">
+            <img src="images/sppp.jpg" alt="sp" style="width:400">
           </div>
+        <div class="column2">
+          <img src="images/yogurt.png" alt="yogurt" style="width:400">
         </div>
         <div class="column2">
-          <img src="images/yogurt.png" alt="yogurt" style="width:300">
+          <img src="images/strombolis.png" alt="strombolis" style="width:400">
         </div>
         <div class="column2">
-          <img src="images/strombolis.png" alt="strombolis" style="width:300">
+          <img src="images/stir fry.jpg" alt="stirfry" style="width:400">
+        </div>
         </div>
         <br>
-          <fieldset>
-            These foods are Tommy's Pizza In the left corner, Tommy's is located in Columbus Ohio.<br> The second food is a Sweet-Potato with butter and Brown Sugar on it. 
-            <br>The Middle food is Stromboli. It has pepperoni and cheese in the middle and on top of the bread it has arregano. <br>The 4th food is a fruit parfait. It has
-            blueberrys, and rasberrys and cherrys.<br> The last food is chicken tacos with pico de gallo on it. And these are our favorite foods :)
-          </fieldset>
+        <fieldset>
+          Going left to right<br>
+           1. This is “Tommy's Pizza” In the left corner, Tommy's is located in Columbus Ohio.<br>
+           2. This is chicken tacos with pico de gallo on it.<br> 
+           3. This food is a Sweet-Potato with butter and Brown Sugar on it. <br> 
+           4. This is a fruit parfait. It has blueberries, and raspberries and cherries.<br>
+          5. This is Stromboli. It has pepperoni and cheese in the middle and on top of the bread it has oregano. <br>
+           6. This is stir fry and it is a chinese dish and it includes vegetables, noodles, and chicken. It honestly can have anything in it.<br>
+            And these are our favorite foods :) </fieldset>
     </body>
 </html>
