--- a/Food.html
+++ b/Food.html
@@ -5,6 +5,7 @@
     <body>
         <table id="header-table">
             <tr id="header-tr">
+              <td id="hippo"><img src="images/hippo.png" width="99px"></td>
                 <td id="header-td"><a href="index.html" class="active">About</a></td>
                 <td id="header-td"><a href="Food.html" class="active">Favorite food</a></td>
                 <td id="header-td"><a href="brands.html" class="active">Brands of food</a></td>
@@ -15,22 +16,22 @@
         <p class="title">Favorite Food</p>
         <div class="row">
           <div class="column2">
-            <img src="images/pizza.png" alt="pizza" style="width:400">
+            <img src="images/pizza.png" alt="pizza" style="width:350">
           </div>
           <div class="column2">
-            <img src="images/taco.png" alt="taco" style="width:400">
+            <img src="images/taco.png" alt="taco" style="width:350">
           </div>
           <div class="column2">
-            <img src="images/sppp.jpg" alt="sp" style="width:400">
+            <img src="images/sppp.jpg" alt="sp" style="width:350">
           </div>
         <div class="column2">
-          <img src="images/yogurt.png" alt="yogurt" style="width:400">
+          <img src="images/yogurt.png" alt="yogurt" style="width:350">
         </div>
         <div class="column2">
-          <img src="images/strombolis.png" alt="strombolis" style="width:400">
+          <img src="images/strombolis.png" alt="strombolis" style="width:350">
         </div>
         <div class="column2">
-          <img src="images/stir fry.jpg" alt="stirfry" style="width:400">
+          <img src="images/stir fry.jpg" alt="stirfry" style="width:350">
         </div>
         </div>
         <br>
