--- a/chefs.html
+++ b/chefs.html
@@ -5,6 +5,7 @@
     <body>
         <table id="header-table">
             <tr id="header-tr">
+                <td id="hippo"><img src="images/hippo.png" width="99px"></td>
                 <td id="header-td"><a href="index.html" class="active">About</a></td>
                 <td id="header-td"><a href="Food.html" class="active">Favorite food</a></td>
                 <td id="header-td"><a href="brands.html" class="active">Brands of food</a></td>
