--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <table id="header-table">
             <tr id="header-tr">
+                <td id="hippo"><img src="images/hippo.png" width="99px"></td>
                 <td id="header-td"><a href="index.html" class="active">About</a></td>
                 <td id="header-td"><a href="Food.html" class="active">Favorite food</a></td>
                 <td id="header-td"><a href="brands.html" class="active">Brands of food</a></td>
@@ -18,14 +19,15 @@
             </tr>
         </table>
         <br>
-        <h1 class="title">About</h1>
         <div class="text-box">
-            <h3 style="color:#FFFFFF">Favorite Food page will tell you about all our favorite foods what they are</h3>
-            <h3 style="color:#FFFFFF">Brands of food will tell you about what brands of food we like and what we enjoy</h3>
-            <h3 style="color:#FFFFFF">Recipies page will inform you of all our faovirte recipies</h3>
-            <h3 style="color:#FFFFFF">Chefs will show all our faovrite chefs</h3>
+            <h2 style="color:#FFFFFF">About</h1>
+            <h1 style="color:#FFFFFF">Favorite Food page will tell you about all our favorite foods what they are</h3>
+            <h1 style="color:#FFFFFF">Brands of food will tell you about what brands of food we like and what we enjoy</h3>
+            <h1 style="color:#FFFFFF">Recipies page will inform you of all our faovirte recipies</h3>
+            <h1 style="color:#FFFFFF">Chefs will show all our faovrite chefs</h3>
         </div>
         <br>
-        <img src="images/240_F_430621952_bjSk1Z2zSz0ZH5m68rnEdJPWRe4J57qX.jpg" alt="foodd" width="1900" height="351">
+        <br>
+        <img src="images/lovely.jpg" alt="foodd" width="1900" height="430">
     </body>
 </html>
