--- a/intro.html
+++ b/intro.html
@@ -2,11 +2,6 @@
     <head>
         <link rel="stylesheet" href="scripts/script.css">
     </head>
-    <style>
-        h1 {text-align: center;}
-        h2 {text-align: center;}
-        h3 {text-align: center;}
-    </style>
     <body>
         <table id="header-table">
             <tr id="header-tr">
@@ -19,16 +14,18 @@
                 <td id="header-td"><a href="chefs.html" class="active">Chefs</a></td>
             </tr>
         </table>
-        <br>
-        <div class="text-box">
-            <h2 style="color:#FFFFFF">About</h1>
-            <h1 style="color:#FFFFFF">Favorite Food page will tell you about all our favorite foods what they are</h3>
-            <h1 style="color:#FFFFFF">Brands of food will tell you about what brands of food we like and what we enjoy</h3>
-            <h1 style="color:#FFFFFF">Recipies page will inform you of all our faovirte recipies</h3>
-            <h1 style="color:#FFFFFF">Chefs will show all our faovrite chefs</h3>
-        </div>
-        <br>
-        <br>
-        <img src="images/lovely.jpg" alt="foodd" width="1900" height="430">
+        <h1>IN PROGRESS!!</h1>
+        <a href="landon.html">
+            <img alt="landon" src="images/" width="600" height="500">
+        </a>
+        <p>..........</p>
+        <a href="matthew.html">
+            <img alt="matthew" src="images/" width="600" height="500">
+            </a>
+            <p>..........</p>
+        <a href="aundraya.html">
+            <img alt="aundraya" src="images/Tteokbokki-Cheesy-Korean-Rice-Cakes.png" width="600" height="500" >
+            </a>
+            <p>..........</p>
     </body>
 </html>
