--- a/brands.html
+++ b/brands.html
@@ -5,12 +5,13 @@
     <body>
         <table id="header-table">
             <tr id="header-tr">
-                <td id="hippo"><img src="images/hippo.png" width="99px"></td>
-                <td id="header-td"><a href="index.html" class="active">About</a></td>
-                <td id="header-td"><a href="Food.html" class="active">Favorite food</a></td>
-                <td id="header-td"><a href="brands.html" class="active">Brands of food</a></td>
-                <td id="header-td"><a href="recipies.html" class="active">Recipies</a></td>
-                <td id="header-td"><a href="chefs.html" class="active">Chefs</a></td>
+              <td id="hippo"><img src="images/hippo.png" width="99px"></td>
+              <td id="header-td"><a href="intro.html" class="active">Intro</a></td>
+              <td id="header-td"><a href="index.html" class="active">About</a></td>
+              <td id="header-td"><a href="Food.html" class="active">Favorite food</a></td>
+              <td id="header-td"><a href="brands.html" class="active">Brands of food</a></td>
+              <td id="header-td"><a href="recipies.html" class="active">Recipies</a></td>
+              <td id="header-td"><a href="chefs.html" class="active">Chefs</a></td>
             </tr>
         </table>
         <p class="title">Brands</p>
