--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
         h3 {text-align: center;}
     </style>
     <body>
-        <table id="header-table">
-            <tr id="header-tr">
-                <td id="header-td"><a href="index.html" class="active">About</a></td>
-                <td id="header-td"><a href="Food.html" class="active">Favorite food</a></td>
-                <td id="header-td"><a href="brands.html" class="active">Brands of food</a></td>
-                <td id="header-td"><a href="recipies.html" class="active">Recipies</a></td>
-                <td id="header-td"><a href="chefs.html" class="active">Chefs</a></td>
-            </tr>
-        </table>
+        <ul class="nav">
+            <li><img src="images/"></li>
+            <li><a href="Index.html">About</a></li>
+            <li><a href="Food.html">Favorite Food</a></li>
+            <li><a href="brands.html">Brands</a></li>
+            <li><a href="recipies.html">Recipies</a></li>
+            <li><a href="chefs.html">Chefs</a></li>
+            </ul>
         <br>
         <h1 class="title">About</h1>
         <div class="text-box">
