--- a/aundraya.html
+++ b/aundraya.html
@@ -14,3 +14,5 @@
                 <td id="header-td"><a href="chefs.html" class="active">Chefs</a></td>
             </tr>
         </table>
+    </body>
+</html>
