--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <ul class="nav">
             <li><a href="Index.html">About</a></li>
+            <li><a href="intro.html">Intro</a></li>
             <li><a href="Food.html">Favorite Food</a></li>
             <li><a href="brands.html">Brands</a></li>
             <li><a href="recipies.html">Recipies</a></li>
