--- a/recipies.html
+++ b/recipies.html
@@ -18,7 +18,7 @@
         <fieldset>
         This is the food pizza and the recipe for pizza would be... 
             <br>
-            INGREDIENTS
+            INGREDIENTS:
             <br>
             Dough:
             <br>
