--- a/Food.html
+++ b/Food.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <ul class="nav">
-          <li><a href="intro.html">intro</a></li>
+          <li><a href="intro.html">Intro</a></li>
           <li><a href="Index.html">About</a></li>
           <li><a href="Food.html">Favorite Food</a></li>
           <li><a href="brands.html">Brands</a></li>
