--- a/intro.html
+++ b/intro.html
@@ -3,29 +3,15 @@
         <link rel="stylesheet" href="scripts/script.css">
     </head>
     <body>
-<<<<<<< HEAD
         <ul class="nav">
-            <li><a href="intro.html">intro</a></li>
+            <li><a href="intro.html">Intro</a></li>
             <li><a href="Index.html">About</a></li>
             <li><a href="Food.html">Favorite Food</a></li>
             <li><a href="brands.html">Brands</a></li>
             <li><a href="recipies.html">Recipies</a></li>
             <li><a href="chefs.html">Chefs</a></li>
             </ul>
-        <h1>IN PROGRESS!!</h1>
-=======
-        <table id="header-table">
-            <tr id="header-tr">
-                <td id="hippo"><img src="images/hippo.png" width="99px"></td>
-                <td id="header-td"><a href="intro.html" class="active">Intro</a></td>
-                <td id="header-td"><a href="index.html" class="active">About</a></td>
-                <td id="header-td"><a href="Food.html" class="active">Favorite food</a></td>
-                <td id="header-td"><a href="brands.html" class="active">Brands of food</a></td>
-                <td id="header-td"><a href="recipies.html" class="active">Recipies</a></td>
-                <td id="header-td"><a href="chefs.html" class="active">Chefs</a></td>
-            </tr>
-        </table>
->>>>>>> cfba3c3dbffb6cffcc2e4a784dfcdd2ab0404e6a
+        <h1>The Hippos Team</h1>
         <a href="landon.html">
             <img src="images/" alt="landon page" width="600" height="400">
         </a>
