--- a/intro.html
+++ b/intro.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <ul class="nav">
+            <li id="hippo"><img src="images/hippo.png" width="50"></li>
             <li><a href="intro.html">intro</a></li>
             <li><a href="Index.html">About</a></li>
             <li><a href="Food.html">Favorite Food</a></li>
@@ -12,17 +13,6 @@
             <li><a href="chefs.html">Chefs</a></li>
             </ul>
         <h1>IN PROGRESS!!</h1>
-        <table id="header-table">
-            <tr id="header-tr">
-                <td id="hippo"><img src="images/hippo.png" width="99px"></td>
-                <td id="header-td"><a href="intro.html" class="active">Intro</a></td>
-                <td id="header-td"><a href="index.html" class="active">About</a></td>
-                <td id="header-td"><a href="Food.html" class="active">Favorite food</a></td>
-                <td id="header-td"><a href="brands.html" class="active">Brands of food</a></td>
-                <td id="header-td"><a href="recipies.html" class="active">Recipies</a></td>
-                <td id="header-td"><a href="chefs.html" class="active">Chefs</a></td>
-            </tr>
-        </table>
         <a href="landon.html">
             <img src="images/" alt="landon page" width="600" height="400">
         </a>
