--- a/aundraya.html
+++ b/aundraya.html
@@ -16,9 +16,16 @@
             <li><a href="recipies.html">Recipies</a></li>
             <li><a href="chefs.html">Chefs</a></li>
             </ul>
+            <br><br>
         <div class="intro">
-            <h1>Aundraya</h1>
+            <h1>Aundraya Randolph</h1>
             <h3>Developer</h3>
+            <p>Favorite food:</p>
+            <img src="images/Tteokbokki-Cheesy-Korean-Rice-Cakes.png" width="500">
+            <p>Faovrite chef:</p>
+            <img src="images/GordonRamsay_KitchenMaster-FTR.jpg" width="500">
+            <p>Faovrite brand:</p>
+            <img src="images/takis.jpg" width="500">
         </div>
     </body>
 </html>
