--- a/intro.html
+++ b/intro.html
@@ -2,6 +2,11 @@
     <head>
         <link rel="stylesheet" href="scripts/script.css">
     </head>
+    <style>
+        div.intro {
+          text-align: center;
+        }   
+        </style>
     <body>
         <ul class="nav">
             <li><a href="intro.html">Intro</a></li>
@@ -11,15 +16,10 @@
             <li><a href="recipies.html">Recipies</a></li>
             <li><a href="chefs.html">Chefs</a></li>
             </ul>
+            <br><br>
+        <div class="intro">
         <h1>The Hippos Team</h1>
-        <a href="landon.html">
-            <img src="images/" alt="landon page" width="600" height="400">
-        </a>
-        <a href="matthew.html">
-            <img src="images/" alt="matthew page" width="600" height="400">
-        </a>
-        <a href="aundraya.html">
-            <img src="images/" alt="aundraya page" width="600" height="400">
-        </a>
-    </body>
+   
+            </body>
+            </html>
 </html>
