--- a/landon.html
+++ b/landon.html
@@ -16,9 +16,17 @@
             <li><a href="recipies.html">Recipies</a></li>
             <li><a href="chefs.html">Chefs</a></li>
             </ul>
+            <br><br>
         <div class="intro">
             <h1>Landon</h1>
             <h3>Product Owner</h3>
+            <p>Favorite food:</p>
+            <img src="images/" width="500">
+            <p>Faovrite chef:</p>
+            <img src="images/" width="500">
+            <p>Faovrite brand:</p>
+            <img src="images/" width="500">
+        </div>
         </div>
     </body>
 </html>
