--- a/matthew.html
+++ b/matthew.html
@@ -16,9 +16,16 @@
             <li><a href="recipies.html">Recipies</a></li>
             <li><a href="chefs.html">Chefs</a></li>
             </ul>
+            <br><br>
         <div class="intro">
             <h1>Matthew</h1>
             <h3>Scrum Master</h3>
+            <p>Favorite food:</p>
+            <img src="images/" width="500">
+            <p>Faovrite chef:</p>
+            <img src="images/" width="500">
+            <p>Faovrite brand:</p>
+            <img src="images/" width="500">
         </div>
     </body>
 </html>
