--- a/aundraya.html
+++ b/aundraya.html
@@ -19,7 +19,8 @@
             <br><br>
         <div class="intro">
             <h1>Aundraya Randolph</h1>
-            <h3>Developer</h3>
+            <h2>Developer</h2>
+            <h3>Tried to make everything pretty</h3>
             <p>Favorite food:</p>
             <img src="images/Tteokbokki-Cheesy-Korean-Rice-Cakes.png" width="500">
             <p>Faovrite chef:</p>
