--- a/intro.html
+++ b/intro.html
@@ -12,7 +12,7 @@
         </style>
     <body>
         <ul class="nav">
-            <li><a href="intro.html">intro</a></li>
+            <li><a href="intro.html">Intro</a></li>
             <li><a href="Index.html">About</a></li>
             <li><a href="Food.html">Favorite Food</a></li>
             <li><a href="brands.html">Brands</a></li>
@@ -21,8 +21,13 @@
             </ul>
         <div class="z">
             <h1>The Hippos Team</h1>
+            <p><a href="landon.html">Landon</a></p>
+            <img src="images/trump.jpg"width="600" height="500">
+            <p><a href="matthew.html">Matthew</a></p>
+            <img src="images/"width="600" height="400">
+            <p><a  href="aundraya.html">Aundraya</a></p>
+            <img src="images/panda.jpg"width="600" height="400">
         </div>
-   
             </body>
             </html>
 </html>
