--- a/landon.html
+++ b/landon.html
@@ -19,7 +19,8 @@
             <br><br>
         <div class="intro">
             <h1>Landon</h1>
-            <h3>Product Owner</h3>
+            <h2>Product Owner</h2>
+            <h3>Chose the logo based on family group chat</h3>
             <p>Favorite food:</p>
             <img src="images/" width="500">
             <p>Faovrite chef:</p>
