--- a/matthew.html
+++ b/matthew.html
@@ -19,7 +19,8 @@
             <br><br>
         <div class="intro">
             <h1>Matthew</h1>
-            <h3>Scrum Master</h3>
+            <h2>Scrum Master</h2>
+            <h3>The smart one the figured out the navigation</h3>
             <p>Favorite food:</p>
             <img src="images/" width="500">
             <p>Faovrite chef:</p>
