--- a/matthew.html
+++ b/matthew.html
@@ -20,11 +20,11 @@
         <div class="intro">
             <h1>Matthew</h1>
             <h3>Scrum Master</h3>
-            <p>Favorite food:</p>
+            <p>Favorite food: Steak</p>
+            <img src="images/Kettle.jpg" width="500">
+            <p>Faovrite chef: Gordan Ramsay</p>
             <img src="images/" width="500">
-            <p>Faovrite chef:</p>
-            <img src="images/" width="500">
-            <p>Faovrite brand:</p>
+            <p>Faovrite brand: Kettle</p>
             <img src="images/" width="500">
         </div>
     </body>
