--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <h1 style="color:#FFFFFF">Recipies page will inform you of all our faovirte recipies</h3>
             <h1 style="color:#FFFFFF">Chefs will show all our faovrite chefs</h3>
         </div>
+        <img src="images/trump.jpg">
         <br>
         <br>
         <img src="images/lovely.jpg" alt="foodd" width="1900" height="430">
