--- a/intro.html
+++ b/intro.html
@@ -3,11 +3,16 @@
         <link rel="stylesheet" href="scripts/script.css">
     </head>
     <style>
-        div.intro {
+        div.h {
           text-align: center;
+          font-size: 30pt;
         }
         div.z {
         text-align: center;
+        font-size: 20pt;
+        }
+        a:hover{
+            background-color: #00ccff;
         }
         </style>
     <body>
@@ -19,13 +24,15 @@
             <li><a href="recipies.html">Recipies</a></li>
             <li><a href="chefs.html">Chefs</a></li>
             </ul>
-        <div class="z">
+        <div class="h">
             <h1>The Hippos Team</h1>
-            <p><a href="landon.html">Landon</a></p>
+        </div>
+        <div class="z">
+            <p><a style="color:black;" href="landon.html">Landon</a></p>
             <img src="images/trump.jpg"width="600" height="500">
-            <p><a href="matthew.html">Matthew</a></p>
+            <p><a style="color:black;" href="matthew.html">Matthew</a></p>
             <img src="images/"width="600" height="400">
-            <p><a  href="aundraya.html">Aundraya</a></p>
+            <p><a style="color:black;" href="aundraya.html">Aundraya</a></p>
             <img src="images/panda.jpg"width="600" height="400">
         </div>
             </body>
