--- a/matthew.html
+++ b/matthew.html
@@ -20,7 +20,7 @@
         <div class="intro">
             <h1>Matthew</h1>
             <h2>Scrum Master</h2>
-            <h3>The smart one the figured out the navigation</h3>
+            <h3>The smart one that figured out the navigation</h3>
             <p>Favorite food:</p>
             <img src="images/" width="500">
             <p>Faovrite chef:</p>
