--- a/recipies.html
+++ b/recipies.html
@@ -30,16 +30,16 @@
             <br>
             1/2 tsp salt
             <br>
-            1/2 tsp vanilla extract
+            1/2 tsp vanilla extract 
             <br>
             2 tbsp extra virgin olive oil
             <br>
-            2 cups all purpose flour
+            2 cups all purpose flour 
             <br>
             Sauce:
-            1 can tomato sauce
+            1 can tomato sauce 
             <br>
-            2 tbsp extra virgin olive oil
+            2 tbsp extra virgin olive oil 
             <br>
             1/2 tbsp basil
             <br>
@@ -47,7 +47,7 @@
             <br>
             1 tsp sugar
             <br>
-            1/4 tsp salt
+            1/4 tsp <span title="Trump Sucks"> salt</span> 
             <br>
             1/4 tsp red pepper flakes
             <br>
