--- a/intro.html
+++ b/intro.html
@@ -22,7 +22,7 @@
         <div class="z">
             <h1>The Hippos Team</h1>
             <p><a href="landon.html">Landon</a></p>
-            <img src="images/trump.jpg"width="600" height="500">
+            <img src="images/"width="600" height="500">
             <p><a href="matthew.html">Matthew</a></p>
             <img src="images/"width="600" height="400">
             <p><a  href="aundraya.html">Aundraya</a></p>
