--- a/matthew.html
+++ b/matthew.html
@@ -19,23 +19,13 @@
             <br><br>
         <div class="intro">
             <h1>Matthew</h1>
-<<<<<<< HEAD
             <h3>Scrum Master</h3>
             <p>Favorite food: Steak</p>
-            <img src= width="500">
-            <p>Faovrite chef: Gordan Ramsay</p>
-=======
-            <h2>Scrum Master</h2>
-            <h3>The smart one the figured out the navigation</h3>
-            <p>Favorite food:</p>
             <img src="images/" width="500">
-            <p>Faovrite chef:</p>
+            <p>Favorite chef: Gordan Ramsay</p>
             <img src="images/" width="500">
-            <p>Faovrite brand:</p>
->>>>>>> cbb0b56edd3def46639ff37991464e2f7de1c0ff
-            <img src="images/" width="500">
-            <p>Faovrite brand:  Kettle</p>
-            <img src="images/images/Kettle.jpg" width="500">
+            <p>Faovrite brand: Kettle</p>
+            <img src="images/Kettle.jpg" width="500">
         </div>
     </body>
 </html>
