--- a/matthew.html
+++ b/matthew.html
@@ -21,9 +21,9 @@
             <h1>Matthew</h1>
             <h3>Scrum Master</h3>
             <p>Favorite food: Steak</p>
-            <img src="images/" width="500">
+            <img src="images/steak.jpg" width="500">
             <p>Favorite chef: Gordan Ramsay</p>
-            <img src="images/" width="500">
+            <img src="images/GordanRamsay.jpg" width="500">
             <p>Faovrite brand: Kettle</p>
             <img src="images/Kettle.jpg" width="500">
         </div>
