--- a/intro.html
+++ b/intro.html
@@ -24,7 +24,7 @@
             <p><a href="landon.html">Landon</a></p>
             <img src="images/"width="600" height="500">
             <p><a href="matthew.html">Matthew</a></p>
-            <img src="images/"width="600" height="400">
+            <img src="images/hippo2.jpg"width="600" height="400">
             <p><a  href="aundraya.html">Aundraya</a></p>
             <img src="images/panda.jpg"width="600" height="400">
         </div>
