--- a/landon.html
+++ b/landon.html
@@ -22,11 +22,11 @@
             <h2>Product Owner</h2>
             <h3>Chose the logo based on family group chat</h3>
             <p>Favorite food:</p>
-            <img src="images/" width="500">
+            <img src="images/pizza.png" width="500">
             <p>Faovrite chef:</p>
             <img src="images/" width="500">
             <p>Faovrite brand:</p>
-            <img src="images/" width="500">
+            <img src="images/hdchips.jpg" width="500">
         </div>
         </div>
     </body>
