--- a/recipies.html
+++ b/recipies.html
@@ -57,5 +57,42 @@
             PREPARATION
             In large bowl, combine hot water, yeast, and sugar. Stir with a fork and let sit 4 minutes until foamy. Add salt, vanilla, olive oil, and flour. Stir as well as you can with a wooden spoon, then transfer to a large, flour dusted working surface. Knead the dough by hand, adding a dusting of flour if too sticky. (A good trick is to fold in half left to right, then right to left, then top to bottom, then repeat) Roll out the dough with a roller to fit your pizza pan. Personally, I roll it out a little larger, then using the pizza pan as a guide, I cut the excess off and then roll it to form a higher edge. For the sauce, combine all ingredients, mix with a fork, and pour on the dough! Add 1 lb shredded mozzarella cheese and toppings of choice and cook at 475 for 13 to 20 minutes. 
         </fieldset>
+        <fieldset>
+            This is the Apple pie recipe...
+            <br>
+            1 recipe pastry for a 9 inch double crust pie
+            <br>
+            ½ cup unsalted butter
+            <br>
+            3 tablespoons all-purpose flour 
+            <br>
+            ¼ cup water
+            <br>
+            ½ cup white sugar
+            <br>
+            ½ cup packed brown sugar
+            <br>
+            8 Granny Smith apples - peeled, cored and sliced
+            <br>
+            <br>
+            Directions!!
+            <br>
+            Step 1
+            <br>
+            <br>
+            Preheat oven to 425 degrees F (220 degrees C). Melt the butter in a saucepan. Stir in flour to form a paste. Add water, white sugar and brown sugar, and bring to a boil. Reduce temperature and let simmer.
+            <br>
+            <br>
+            Step 2
+            <br>
+            <br>
+            Place the bottom crust in your pan. Fill with apples, mounded slightly. Cover with a lattice work crust. Gently pour the sugar and butter liquid over the crust. Pour slowly so that it does not run off.
+            <br>
+            <br>
+            Step 3
+            <br>
+            <br>
+            Bake 15 minutes in the preheated oven. Reduce the temperature to 350 degrees F (175 degrees C). Continue baking for 35 to 45 minutes, until apples are soft.
+        </fieldset>
     </body>
 </html>
