--- a/intro.html
+++ b/intro.html
@@ -31,7 +31,7 @@
             <p><a style="color:black;" href="landon.html">Landon</a></p>
             <img src="images/trump.jpg"width="600" height="500">
             <p><a style="color:black;" href="matthew.html">Matthew</a></p>
-            <img src="images/"width="600" height="400">
+            <img src="images/hippo2.jpg"width="600" height="400">
             <p><a style="color:black;" href="aundraya.html">Aundraya</a></p>
             <img src="images/panda.jpg"width="600" height="400">
         </div>
