--- a/aundraya.html
+++ b/aundraya.html
@@ -24,7 +24,7 @@
             <p>Favorite food:</p>
             <img src="images/Tteokbokki-Cheesy-Korean-Rice-Cakes.png" width="500">
             <p>Faovrite chef:</p>
-            <img src="images/GordonRamsay_KitchenMaster-FTR.jpg" width="500">
+            <img src="images/GordanRamsay.jpg" width="500">
             <p>Faovrite brand:</p>
             <img src="images/takis.jpg" width="500">
         </div>
