--- a/landon.html
+++ b/landon.html
@@ -24,7 +24,7 @@
             <p>Favorite food:</p>
             <img src="images/pizza.png" width="500">
             <p>Faovrite chef:</p>
-            <img src="images/" width="500">
+            <img src="images/GordanRamsay.jpg" width="500">
             <p>Faovrite brand:</p>
             <img src="images/hdchips.jpg" width="500">
         </div>
